fix instruction box overlapping the footer

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -11,6 +11,7 @@
   @media only screen and (min-width : 992px) {
     position: relative;
     top: 3em;
+    margin-bottom: 5em;
   }
 
   border: 2px solid darkgray;
